# boids

./: .clang-format  CMakeLists.txt  boids.hpp  classi.hpp  flock.hpp  graphics.cpp  graphics.hpp  main.cpp  prova.cpp  r_numbers.hpp  simulation.cpp  simulation.hpp  simulation.test.cpp  statistics.cpp  velocity.cpp  velocity.hpp
chain_sfml_cmake/: main.cpp
